fix: 유저 권한정보 처리 에러 수정